# context-graph

./: .gitignore  Dockerfile  MCP_README.MD  README.md  git_clone.py  lanuage_detector.py  main.py  output.txt  pyproject.toml  repo_analysis.json
both_supports/: cdxgen_sbom_generator.py  git_clone.py  os_detect.py  retrieve_components.py
generate_dependency_tree/: go.py  gradle.py  maven.py  nodejs.py  python.py
generate_dependency_tree/go_lang/: dependency_tree.py  files_exstit.py
generate_dependency_tree/gradle/: gradle_dependency.py
generate_dependency_tree/maven/: maven_dependency_tree.py
generate_dependency_tree/package_json/: nodejs.py  nodejs_json_format.py
generate_dependency_tree/python/: convert_deps.py  deps.py  python_files_exsist.py  venv_manager.py
linux_flow/: linux_commands.py  repo_analizer.py  search_framework.py
llm/: base.py  config.json  factory.py  main.py  openai_client.py  servers_config.json
mcp_servers/: server.py
mcp_servers/tools/: analyzer_repo.py  extract_components.py  framework.py  git_clone.py  sbom.py  tree.py
python_flow/: lanuage_detector.py  windows_search_framework.py
unix_supports/: cdxgen_sbom_generator.py  os_detect.py
