[project]
name = "context_graph_utility"
version = "0.1.0"
description = "MCP chatbot with OpenAI + context analyze"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Madhu" }]
license = { text = "MIT" }

dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1,<0.29.0",
    "openai>=1.91.0,<2.0.0",
    "mcp>=1.11.0,<2.0.0",
    "pip>=23.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_simple_chatbot"]

[tool.pyright]
include = ["mcp_calculator_server", "mcp_simple_chatbot"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry]
name = "mcp-calculator-chatbot"
version = "0.1.0"
description = "MCP chatbot with OpenAI + calculator server"
authors = ["Madhu"]
packages = [
    { include = "mcp_simple_chatbot" }
]
